fixed the horizontal scroll for the mobile version

--- a/about.css
+++ b/about.css
@@ -70,6 +70,13 @@ footer .social-links a:hover {
   }
   .content-area {
     text-align: center;
-    padding: 100px 0;
+    padding: 50px 0;
+  }
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
   }
 }
