--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,6 @@
+.navbar-dark {
+  background-color: black;
+}
 * {
   padding: 0;
   margin: 0;
