--- a/style.css
+++ b/style.css
@@ -3,13 +3,11 @@
   --secondary-color: #f5f2fe;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
-
 h3 {
   font-size: 24px;
   opacity: 0.7;
-  color: white;
+  color: grey;
   width: 90%;
-  padding-left: 21vh;
 }
 
 p {
@@ -33,8 +31,8 @@ p {
 .content {
   height: 100%;
   width: 100%;
-  padding-top: 30vh;
-  padding-left: 20vh;
+  padding: 50px;
+  text-align: center;
 }
 .content h1 {
   font-size: 70px;
@@ -44,7 +42,6 @@ p {
 }
 .home-btn {
   margin-top: 10vh;
-  margin-left: 30%;
   padding: 10px 20px;
   background: transparent;
   transition: 0.5s;
@@ -144,20 +141,22 @@ footer .social-links a:hover {
   color: palevioletred;
 }
 @media (max-width: 768px) {
-  h2 {
+  h1 {
     font-size: 48px;
     line-height: 1.5;
   }
   h3 {
-    font-size: 32px;
+    font-size: 24px;
     text-align: center;
   }
   p {
     text-align: center;
   }
-  button {
-    display: block;
-    text-align: center;
-    margin: 0 20px;
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
   }
 }
