--- a/work.css
+++ b/work.css
@@ -9,11 +9,11 @@
   background-size: cover;
 }
 .work-container h1 {
-  padding-top: 10vh;
-  padding: 50px 250px;
+  padding: 60px 20px;
   font-family: "Encode Sans Semi Condensed", sans-serif;
   font-weight: 700;
   color: white;
+  text-align: center;
 }
 .content-area {
   background-color: rgba(219, 208, 208, 0.678);
@@ -23,10 +23,9 @@
   margin: 10px;
 }
 .content-area p {
-  width: 75%;
-  margin-left: 15vh;
-  margin-top: 10vh;
+  width: 80%;
   font-size: 18px;
+  padding: 15px 50px;
 }
 .about-btn {
   background-color: transparent;
@@ -54,6 +53,7 @@ footer {
   margin: 0;
   background-color: black;
   height: 30vh;
+  bottom: 0;
 }
 footer .email-link {
   text-decoration: none;
@@ -75,7 +75,7 @@ footer .social-links a:hover {
   color: palevioletred;
 }
 @media (max-width: 768px) {
-  h2 {
+  h1 {
     font-size: 48px;
     line-height: 1.5;
   }
@@ -86,13 +86,29 @@ footer .social-links a:hover {
   p {
     text-align: center;
   }
-  button {
-    display: block;
-    text-align: center;
-    margin: 0 20px;
+  .work-container {
+    margin-bottom: 100vh;
   }
   .content-area {
     text-align: center;
-    padding: 100px 0;
+    padding: 50px 0;
+  }
+  .content-area img {
+    width: 350px;
+  }
+  .content-area p {
+    padding: 2px 10px;
+    text-align: start;
+  }
+  .weather-row {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
   }
 }
